# jitsi-webrtc-vad-wrapper

./: .gitignore  CMakeLists.txt  compile_libfvad.sh  compile_libwebrtcvadwrapper.sh  generate_jni_header.sh  pom.xml  readme.md
src/main/java/org/jitsi/webrtcvadwrapper/: SpeechDetector.java  UnsupportedFrameLengthException.java  VadClosedException.java  WebRTCVad.java
src/main/java/org/jitsi/webrtcvadwrapper/Exceptions/: NativeLibraryException.java  UnsupportedSampleRateException.java  UnsupportedSegmentLengthException.java  UnsupportedThresholdException.java  UnsupportedVadModeException.java  UnsupportedWindowSizeException.java  VadClosedException.java
src/main/java/org/jitsi/webrtcvadwrapper/audio/: AudioSegment.java  ByteSignedPcmAudioSegment.java
src/native/: org_jitsi_webrtcvadwrapper_WebRTCVad.cpp  org_jitsi_webrtcvadwrapper_WebRTCVad.h  webrtcvadwrapper_WebRTCVad.cpp  webrtcvadwrapper_WebRTCVad.h
src/test/java/: CreationTest.java  DetectingTest.java
src/test/resources/: detected_speech.txt  wave_file_doubles.txt
